# sentinal-opscenter-v2

./: .env.example  .gitignore  Dockerfile  README.md  SUBMISSION_CHECKLIST.md  docker-compose.yml  main.py  pyproject.toml
.devcontainer/: devcontainer.json
agents/fixer/: fixer.py
agents/notifier/: notifier.py
agents/planner/: planner.py
agents/researcher/: researcher.py
agents/validator/: validator.py
apps/api/: main.py
apps/api/db/: crud.py  database.py
apps/api/services/: workflow_executor.py
apps/dashboard/: streamlit_app.py
scripts/: smoke-test.ps1
shared/config/: settings.py
shared/models/: incident.py
shared/schemas/: workflow.py
shared/utils/: event_normalizer.py  idempotency.py  webhook_security.py
tools/github/: client.py
tools/search/: client.py
workflows/: incident_graph.py
