[project]
name = "sentinal-opscenter-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "jsonpointer>=3.1.1",
    "langchain>=1.3.1",
    "langchain-groq>=1.1.2",
    "langgraph>=1.2.0",
    "omium>=0.4.1",
    "pydantic-settings>=2.14.1",
    "pygithub>=2.9.1",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.49",
    "streamlit>=1.57.0",
    "uvicorn>=0.47.0",
]
